--- a/fonts.css
+++ b/fonts.css
@@ -1,12 +1,12 @@
 h1{
-	font-family: 'Basic', sans-serif;
-	font-size: 65px;
-	font-weight: bold;
-	color: rgb(15, 21, 19);
-}
-
-h1 span {
-	color: rgb(96, 166, 54);
+	font-family: 'Lato', sans-serif;
+	line-height: 52px;
+	font-size: 50px;
+	text-transform: uppercase;
+	font-weight: 300;
+	letter-spacing: .5px;
+	color: #FFF;
+	text-shadow: 1px 1px 3px rgba(0,0,0,0.9);
 }
 
 h2{
@@ -28,17 +28,19 @@ h3 span{
 }
 
 h4{
-	font-family: 'Basic', sans-serif;
+	font-family: 'Lato', sans-serif;
+	line-height: 30px;
 	font-size: 23px;
-	font-weight: bold;
-	color: rgb(96, 166, 54);
+	color: black;
+	text-shadow: 1px 1px 2px rgba(0,0,0,0.9);
 }
 
 h5{
-	font-family: 'Basic', sans-serif;
-	font-size: 18px;
-	font-weight: bold;
-	color: rgb(15, 21, 19);
+	font-family: 'Lato', sans-serif;
+	font-size: 17px;
+	line-height: 22px;
+	color: black;
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.9);
 }
 
 h5 span{
@@ -46,23 +48,26 @@ h5 span{
 }
 
 p{
-	font-family: 'Basic', sans-serif;
-	font-size: 18px;
+	font-family: 'Lato', sans-serif;
+	font-size: 17px;
 	color: rgb(15, 21, 19);
 }
 p span{
-	color: rgb(96, 166, 54);	
+	color: white;	
+	text-shadow: 1px 1px 3px rgba(0,0,0,0.9);
 }
 a{
-	font-family: 'Basic', sans-serif;
-	font-size: 20px;
-	color: rgb(15, 21, 19);
+	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-size: 18px;
+	line-height: 20px;
+	color: rgb(3, 21, 9);
+	padding-top: 3px;
 }
 a:hover{
-	color: rgb(96, 166, 54);
+	color: rgb(9, 31, 13);
 }
 a:visited{
-	color: rgb(96, 166, 54);
+	color: rgb(9, 31, 13);
 }
 @media only screen and (max-width: 600px) {
 	h1{
