--- a/index.css
+++ b/index.css
@@ -1,17 +1,87 @@
-body{
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
 	margin: 0;
 	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+.navbar{
+	width:100%;
+	height: 9vh;
+	background-color: rgba(255, 255, 255, 1);
+	margin:0;
+	top:0;
+	vertical-align: center;
+}
+.navbar-default{
+	height: 9vh;
+}
+.navbar:before{
+	margin:0;
+}
+.navbar-nav{
+	margin-top:0;
 }
 #menu{
-	height: 30px;
 	background-color: rgba(255, 255, 255, 1);
 	position: fixed;
 	text-align: right;
 	z-index: 999;
-	padding-top: 5px;
+	padding-top: 0;
+	height: 9vh;
+	width:100%;
+	top:0;
+	vertical-align: center;
+}
+.menu-link{
+	padding: 2px;
+	padding-top:0;
+	top:0;
+	vertical-align: center;
+}
+.menu-link>a{
+	padding-top:0;
+	margin-top: 0;
+	vertical-align: center;
 }
 #main{
-	height: 700px; 
+	height: 100vh; 
 	margin: 0; 
 	width: 100%;
 	text-align: center;
@@ -21,9 +91,10 @@ body{
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-attachment:fixed;
+	background-position: center;
 }
 .main-title{
-	padding-top: 300px;	
+	padding-top: 40vh;	
 }
 
 .foto{
@@ -32,28 +103,30 @@ body{
 	margin-top: 150px;
 }
 .me{
-	height: auto; 
+	min-height: 100vh; 
+	height:auto;
 	margin: 0 auto; 
 	width: 100%; 
 	max-width: 1920px; 
 	position: relative;
 	padding: 20px;
-	padding-top: 40px;
+	padding-top: 11vh;
 	padding-bottom: 10px;
 	text-align: center;
 }
 .about{
-	margin-top: 50px;
-	text-align: center;
-	padding-bottom: 50px;
+	margin-top: 5vh;
+	text-align: left;
+	padding: 10px;
+	padding-bottom: 10px;
 }
 .foto{
 	width: 80%;
 	margin-top: 60px;
 }
 .soft-skills{
-	text-align: center;
-	padding-bottom: 150px;
+	text-align: left;
+	padding:10px;
 }
 .skill{
 	padding: 5px;
@@ -87,21 +160,21 @@ body{
 	text-align: center;
 }
 #contact{
-	height: 500px;
-	padding-top: 300px;
-	padding-bottom: 500px;
+	height: 100vh;
+	padding-top: 30vh;
 	background-image: url(img/background1.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-attachment:fixed;
+	background-position: center;
 }
 #project1{ 
 	background-image: url(img/1.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
-	background-attachment: fixed;
-	min-height: 300px; 
-	height: 300px; 
+	background-attachment: fixed; 
+	background-position: center;
+	height: 50vh; 
 	margin: 0 auto; 
 	width: 100%; 
 	max-width: 1920px; 
@@ -112,8 +185,8 @@ body{
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	background-size: cover;
-	min-height: 300px; 
-	height: 300px; 
+	background-position: center;
+	height: 50vh; 
 	margin: 0 auto; 
 	width: 100%; 
 	max-width: 1920px; 
@@ -123,16 +196,11 @@ body{
 	background-image: url(img/3.jpg);
 	background-attachment: fixed;
 	background-repeat: no-repeat;
-	background-size: cover;
-	min-height: 500px; 
-	height: 500px; 
+	background-size: cover; 
+	background-position: center;
+	height: 50vh; 
 	margin: 0 auto; 
 	width: 100%; 
 	max-width: 1920px; 
 	position: relative; 
-}
-
-footer{
-	height: 200px;
-	background-color: rgba(236, 238, 234, 1);
 }
